cambio url imagenes

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <body>
 
         <header>
-            <img src="/assets/Logo.png" alt="logo alura">
+            <img src="/Alura-Challenge-N-1/assets/Logo.png" alt="logo alura">
             <div class="firm">
                 <br>
                 <h1 class="title">Encriptador</h1>
@@ -45,7 +45,7 @@
                 </section>
     
                 <aside class="costado">
-                    <img src="/assets/Muñeco.png" alt="muñeco loco">
+                    <img src="/Alura-Challenge-N-1/assets/Muñeco.png" alt="muñeco loco">
                     <h2 id="msg-h2">Ningún mensaje fue encontrado</h2>
                     <p id="msg-p">Ingresa el texto que desees encriptar o desencriptar</p>
                     <div id="btn-copy"></div>
